# live-rust-training

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/rcli/: main.rs
rcli/: Cargo.toml
rcli/src/: lib.rs  main.rs  opts.rs  process.rs
rcli/src/cmd/: base64.rs  csv.rs  mod.rs  opts.rs  pwd.rs
