[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rcli"
path = "src/rcli/main.rs"

[dependencies]
rcli = { path = "../rcli"}
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
