[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["landians@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.4", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8.12"
rand = "0.8.5"
